// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "display": "grid",
        "gridGap": 10,
      }
    }
  >
    <div>
      <div
        data-css-1u5tlcq=""
      >
        default
         
        gray
      </div>
    </div>
    <div>
      <div
        data-css-1yciybc=""
      >
        default
         
        green
      </div>
    </div>
    <div>
      <div
        data-css-1f89r4e=""
      >
        default
         
        yellow
      </div>
    </div>
    <div>
      <div
        data-css-7kwx8e=""
      >
        default
         
        red
      </div>
    </div>
    <div>
      <div
        data-css-mteuqv=""
      >
        default
         
        blue
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance subtle 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "display": "grid",
        "gridGap": 10,
      }
    }
  >
    <div>
      <div
        data-css-dkqbo5=""
      >
        subtle
         
        gray
      </div>
    </div>
    <div>
      <div
        data-css-1grr7kt=""
      >
        subtle
         
        green
      </div>
    </div>
    <div>
      <div
        data-css-1v1fufr=""
      >
        subtle
         
        yellow
      </div>
    </div>
    <div>
      <div
        data-css-waxjmf=""
      >
        subtle
         
        red
      </div>
    </div>
    <div>
      <div
        data-css-1knqer3=""
      >
        subtle
         
        blue
      </div>
    </div>
  </div>
</div>
`;
